--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<p>Your one-stop platform for innovative digital services and earning opportunities.<br />
 							We build smart bots and applications for you.</p>
 						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="Digital Technology" /></span>
+						<span class="image"><img src="images/logo.png" alt="Allinonebd Logo" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
