--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
 							<div class="row gtr-uniform justify-content-center">
 								
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-robot"></span>
-									<h3>TG Bot 1: Earning Bot</h3>
+									<a href="https://t.me/YourBotName?start=7715550982" style="text-decoration: none; border-bottom: none; color: inherit;">
+										<span class="icon solid alt major fa-robot"></span>
+										<h3>TG Bot 1: Earning Bot</h3>
+									</a>
 									<p>Our intelligent Telegram bot allows you to earn money by completing various tasks like watching ads, visiting websites, and more, right from your phone.</p>
 								</section>
 
