--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="#four">Our Products</a></li>
-							<li><a href="https://t.me/YourBotName?start=7715550982" class="button primary">Join Bot</a></li>
+							<li><a href="https://t.me/Allinonebdrealbot?start=7715550982" class="button primary">Join Bot</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -47,7 +47,7 @@
 								<div class="col-12 col-12-medium">
 									<p>We have created a smart Telegram bot that allows you to earn real money easily from your phone. Join thousands of other users and turn your free time into income. Click the button below to get started.</p>
 									<ul class="actions">
-										<li><a href="https://t.me/YourBotName?start=7715550982" class="button">Join Our Earning Bot</a></li>
+										<li><a href="https://t.me/Allinonebdrealbot?start=7715550982" class="button">Join Our Earning Bot</a></li>
 									</ul>
 								</div>
 							</div>
@@ -66,10 +66,9 @@
 							<div class="row gtr-uniform justify-content-center">
 								
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="https://t.me/YourBotName?start=7715550982" class="product-link">
-                                                                        <span class="icon solid alt major fa-robot"></span>
-                                                                        <h3>TG Bot 1: Earning Bot</h3>
-                                                                        </a>
+									<a href="https://t.me/Allinonebdrealbot?start=7715550982" class="product-link">
+										<span class="icon solid alt major fa-robot"></span>
+										<h3>TG Bot 1: Earning Bot</h3>
 									</a>
 									<p>Our intelligent Telegram bot allows you to earn money by completing various tasks like watching ads, visiting websites, and more, right from your phone.</p>
 								</section>
@@ -78,7 +77,7 @@
 						</div>
 						<footer class="major">
 							<ul class="actions special">
-								<li><a href="https://t.me/YourBotName?start=7715550982" class="button">Join Now</a></li>
+								<li><a href="https://t.me/Allinonebdrealbot?start=7715550982" class="button">Join Now</a></li>
 							</ul>
 						</footer>
 					</div>
